--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "highlight.js": "^9.15.10",
     "node-sass": "^4.12.0",
+    "prismjs": "^1.17.1",
     "react": "^16.10.2",
     "react-burger-menu": "^2.6.11",
     "react-dom": "^16.10.2",
