--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "highlight.js": "^9.15.10",
+    "lit-element": "^2.2.1",
     "node-sass": "^4.12.0",
     "prismjs": "^1.17.1",
     "react": "^16.10.2",
