--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "highlight.js": "^9.15.10",
+    "highlight.js": "^9.16.2",
     "lit-element": "^2.2.1",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "prismjs": "^1.17.1",
-    "react": "^16.10.2",
-    "react-burger-menu": "^2.6.11",
-    "react-dom": "^16.10.2",
+    "react": "^16.11.0",
+    "react-burger-menu": "^2.6.12",
+    "react-display-state": "^1.1.2",
+    "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "remarkable": "^2.0.0"
